--- a/ECommerceAPI/ECommerceAPI/appsettings.Development.json
+++ b/ECommerceAPI/ECommerceAPI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=3P39_06;Initial Catalog=ECommerce;Persist Security Info=True;User ID=sa;Password=***********;Pooling=False"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
