--- a/ECommerceAPI/ECommerceAPI/appsettings.json
+++ b/ECommerceAPI/ECommerceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=3P39_06;Initial Catalog=ECommerce;Persist Security Info=True;User ID=sa;Password=***********;Pooling=False"
   },
 
   "Logging": {
